[package]
name = "noctilucent"
version = "0.1.0"
edition = "2021"

[lib]
name = "noctilucent"
path = "src/lib.rs"

[[bin]]
name = "noctilucent"
path = "src/bin.rs"
[dependencies]
actix-web = "4.9.0"
clap = "4.5.23"
reqwest = "0.12.11"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
wiremock = "0.6.0"
